Fix for bug #38757 (MultiPart Form Uploads fail with FastCGI)